Test my second commit
Test my second commit.

--- a/README
+++ b/README
@@ -3,3 +3,5 @@ This is an example to create blogs in github.
 Just follow the instruction here:
 http://www.ruanyifeng.com/blog/2012/08/blogging_with_jekyll.html
 
+
+To test my second submit.
